@@ -101,6 +101,8 @@ A:
 * seed=number -- Set initial random seed, for testing.
 * --screenshot -- Must be used with megahit and a level number. When the level starts, a screenshot is saved to screenshot.png and the game quits.
 * --screenshot-level -- Similar to the above, except the whole level is screenshotted.
+* --screenshot-level-extras -- Similar to the above, except lots of additional info is displayed on the picture, like:
+	room bounds, room numbers, door events, loose floors, potion types, special events, etc.
 
 Q: What keys can I use?
 A:
@@ -165,6 +167,7 @@ Cheats:
 * Shift-S: Restore lost hit-point. (Like a small red potion.)
 * Shift-T: Give more hit-points. (Like a big red potion.)
 * Shift+F12: Save a screenshot of the whole level to screenshot.png.
+* Ctrl+Shift+F12: Save a screenshot of the whole level with extras to screenshot.png.
 
 Debug cheats:
 * [: shift kid 1 pixel to the left
