@@ -25,6 +25,10 @@ The authors of this program may be contacted at http://forum.princed.org
 // TODO: Use incrementing numbers and a separate folder, like DOSBox? Or allow custom filenames.
 const char screenshot_filename[] = "screenshot.png";
 
+#define EVENT_OFFSET 0 // Add this number to displayed event numbers. Use 1 for Apoplexy compatibility.
+
+#define NUMBER_OF_ROOMS 24
+
 // Save a screenshot.
 void save_screenshot() {
 	IMG_SavePNG(onscreen_surface_, screenshot_filename);
@@ -36,6 +40,10 @@ void switch_to_room(int room) {
 	drawn_room = room;
 	load_room_links();
 	
+	if (tbl_level_type[current_level]) {
+		gen_palace_wall_colors();
+	}
+	
 	// for guards
 	Guard.direction = dir_56_none;
 	guardhp_curr = 0; // otherwise guard HPs stay on screen
@@ -44,33 +52,267 @@ void switch_to_room(int room) {
 	check_shadow(); // otherwise the shadow won't appear on level 6
 	
 	// for potion bubbles
-	anim_tile_modif();
-	process_trobs();
+	for (int tilepos=0;tilepos<30;tilepos++) {
+		int tile_type = curr_room_tiles[tilepos] & 0x1F;
+		if (tile_type == tiles_10_potion) {
+			int modifier = curr_room_modif[tilepos];
+			if ((modifier & 7) == 0) curr_room_modif[tilepos]++;
+		}
+	}
 	
 	redraw_screen(1);
 }
 
+bool event_used[256] = {false};
+bool has_trigger_potion = false;
+
+// delta vectors for room links
+const int dx[4] = {-1, +1,  0,  0};
+const int dy[4] = { 0,  0, -1, +1};
+
+int xpos[NUMBER_OF_ROOMS+1] = {0};
+int ypos[NUMBER_OF_ROOMS+1] = {0};
+
+// Show non-visible things, like: room bounds, room numbers, door events, loose floors, potion types, special events, ...
+// (this will make the function even more like a cheat)
+// TODO: guard HPs, skill? fake tiles?
+void draw_extras() {
+	// ambiguous tiles
+	// The editor branch has something similar...
+	for (int tilepos=0;tilepos<30;tilepos++) {
+		int tile_type = curr_room_tiles[tilepos] & 0x1F;
+		int modifier = curr_room_modif[tilepos];
+		int row = tilepos/10;
+		int col = tilepos%10;
+		int y = row * 63 + 3;
+		int x = col * 32;
+		
+		// special floors
+		rect_type floor_rect = {y+60-3, x, y+63-3, x+32};
+		
+		// loose floors
+		if (tile_type == tiles_11_loose) {
+			int color = color_15_brightwhite;
+			if (curr_room_tiles[tilepos] & 0x20) color = color_13_brightmagenta; // stable loose floor
+			show_text_with_color(&floor_rect, 0, -1, "~~~~", color);
+		}
+
+		// buttons
+		if (tile_type == tiles_15_opener) {
+			show_text_with_color(&floor_rect, 0, -1, "^^^^", color_10_brightgreen);
+		}
+		if (tile_type == tiles_6_closer) {
+			//show_text_with_color(&floor_rect, 0, -1, "XXXX", color_12_brightred);
+			floor_rect.top -= 2;
+			show_text_with_color(&floor_rect, 0, -1, "xxxx", color_12_brightred); // only the top half is visible, looks like an inverted "^"
+		}
+
+		// harmless spikes
+		if (tile_type == tiles_2_spike) {
+			if (modifier >= 5) { // harmless
+				rect_type spike_rect = {y+50, x, y+60, x+32};
+				show_text_with_color(&spike_rect, 0, -1, "safe", color_10_brightgreen);
+			}
+		}
+		
+		// potion types
+		if (tile_type == tiles_10_potion) {
+			struct pot_type {
+				int color;
+				const char* text;
+			} pot_types[7] = {
+				{color_7_lightgray, "x"}, // empty
+				{color_12_brightred, "+1"}, // heal
+				{color_12_brightred, "+++"}, // life
+				{color_10_brightgreen, "slow\nfall"}, // slow fall
+				{color_10_brightgreen, "flip"}, // upside down
+				{color_9_brightblue, "-1"}, // hurt
+				{color_9_brightblue, "trig"}, // open
+			};
+			int potion_type = modifier >> 3;
+			int color;
+			const char* text;
+			char temp_text[4];
+			if (potion_type >= 0 && potion_type < 7) {
+				color = pot_types[potion_type].color;
+				text = pot_types[potion_type].text;
+			} else {
+				color = color_15_brightwhite;
+				snprintf(temp_text, sizeof(temp_text), "%d", potion_type);
+				text = temp_text;
+			}
+			rect_type pot_rect = {y+40, x, y+60, x+32};
+			show_text_with_color(&pot_rect, 0, -1, text, color);
+		}
+		
+		// triggered door events
+		if (tile_type == tiles_6_closer || tile_type == tiles_15_opener) {
+			int first_event = modifier;
+			int last_event = modifier;
+			while (last_event<256 && get_doorlink_next(last_event)) last_event++;
+			/*
+			char events[10];
+			if (modifier==last_event) {
+				snprintf(events, sizeof(events), "%d", first_event+EVENT_OFFSET);
+			} else { // from-to
+				snprintf(events, sizeof(events), "%d:%d", first_event+EVENT_OFFSET, last_event+EVENT_OFFSET);
+			}*/
+			char events[256] = "";
+			int events_pos = 0;
+			for (int event=first_event;event<=last_event;event++) {
+				events_pos += snprintf(events+events_pos, sizeof(events)-events_pos, "%d ", event+EVENT_OFFSET);
+			}
+			if (events_pos) events[--events_pos]='\0'; // trim trailing space
+			rect_type buttonmod_rect = {y/*+50-3*/, x, y+60-3, x+32};
+			show_text_with_color(&buttonmod_rect, 0, 1, events, color_14_brightyellow);
+		}
+		
+		// door events that point here
+		char events[256] = "";
+		int events_pos = 0;
+		for (int event=0;event<256;event++) {
+			if (event_used[event] && get_doorlink_room(event) == drawn_room && get_doorlink_tile(event) == tilepos) {
+				events_pos += snprintf(events+events_pos, sizeof(events)-events_pos, "%d ", event+EVENT_OFFSET);
+			}
+		}
+		if (events_pos) events[--events_pos]='\0'; // trim trailing space
+		if (*events) {
+			//printf("room %d, tile %d, events: %s\n", drawn_room, tilepos, events); // debug
+			rect_type events_rect = {y,x,y+63-3,x+32-7};
+			show_text_with_color(&events_rect, 0, 1, events, color_14_brightyellow);
+		}
+		
+		// special events
+		char* special_event = NULL;
+		if (current_level == 0 && drawn_room == 24) {
+			special_event = "exit"; // exit by entering this room
+		}
+		// not marked: level 1 falling entry
+		if (current_level == 1 && drawn_room == 5 && tilepos == 2) {
+			special_event = "start\ntrig"; // triggered at start
+		}
+		if (current_level == 3 && drawn_room == 7 && col == 0) {
+			special_event = "<-\nchk point"; // checkpoint activation
+		}
+		if (current_level == 3 && drawn_room == 7 && tilepos == 4) {
+			special_event = "removed"; // loose floor is removed
+		}
+		if (current_level == 3 && drawn_room == 2 && tile_type == tiles_4_gate) {
+			special_event = "loud"; // closing can be heard everywhere
+		}
+		if (current_level == 3 && drawn_room == 2 && tilepos == 6) {
+			special_event = "check point"; // restart at checkpoint
+		}
+		if (current_level == 3 && drawn_room == 1 && tilepos == 15 && tile_type == tiles_21_skeleton) {
+			special_event = "skel wake"; // skeleton wakes
+		}
+		if (current_level == 3 && drawn_room == 3 && tilepos == 14) {
+			special_event = "skel cont"; // skeleton continue
+		}
+		if (current_level == 4 && drawn_room == 4 && tilepos == 4) {
+			special_event = "mirror"; // mirror appears
+		}
+		// not marked: level 4 mirror clip
+		// not marked: level 5 shadow, required opening gate
+		if (current_level == 5 && drawn_room == 24 && tilepos == 3 && tile_type == tiles_10_potion) {
+			special_event = "stolen"; // stolen potion
+		}
+		// not marked: level 6 shadow (it's already visible)
+		if (current_level == 6 && drawn_room == 1 && row == 2) {
+			special_event = "exit"; // exit by falling
+		}
+		// not marked: level 7 falling entry
+		if (current_level == 8 && drawn_room == 16 && tilepos == 9) {
+			special_event = "mouse"; // mouse comes
+		}
+		if (current_level == 12 && drawn_room == 15 && tilepos == 1 && tile_type == tiles_22_sword) {
+			special_event = "disapp"; // sword disappears
+		}
+		if (current_level == 12 && drawn_room == 18 && col == 9) {
+			special_event = "disapp\n->"; // sword disappears
+		}
+		// not marked: level 12 shadow
+		if (current_level == 12 && row == 0 && (drawn_room == 2 || (drawn_room == 13 && col >= 6))) {
+			special_event = "floor"; // floors appear
+		}
+		if (current_level == 12 && drawn_room == 23) {
+			special_event = "exit"; // exit by entering this room
+		}
+		if (current_level == 13 && (drawn_room == level.roomlinks[23-1].up || drawn_room == level.roomlinks[16-1].up) && (tilepos >= 22 && tilepos <= 27)) {
+			special_event = "fall"; // falling loose floors
+		}
+		if (current_level == 13 && drawn_room == 3 && col == 9) {
+			special_event = "meet\n->"; // meet Jaffar
+		}
+		// not marked: flash
+		if (current_level == 13 && drawn_room == 24 && tilepos == 0) {
+			special_event = "Jffr\ntrig"; // triggered when player enters any room from the right after Jaffar died
+		}
+		if (current_level == 14 && drawn_room == 5) {
+			special_event = "end"; // end of game
+		}
+		if (has_trigger_potion && drawn_room == 8 && tilepos == 0) {
+			special_event = "blue\ntrig"; // triggered when player drinks an open potion
+		}
+		if (special_event) {
+			rect_type event_rect = {y,x-10,y+63,x+32+10};
+			show_text_with_color(&event_rect, 0, 0, special_event, color_14_brightyellow);
+		}
+		
+		// Attempt to show broken room links:
+		byte* roomlinks = (byte*)(&level.roomlinks[drawn_room-1]);
+		for (int direction = 0; direction < 4; direction++) {
+			int other_room = roomlinks[direction];
+			if (other_room >= 1 && other_room <= NUMBER_OF_ROOMS) {
+				int other_x = xpos[drawn_room] + dx[direction];
+				int other_y = ypos[drawn_room] + dy[direction];
+				// If the linked room was placed elsewhere: Write the number of the linked room to the corresponding edge of the room.
+				if (xpos[other_room] != other_x || ypos[other_room] != other_y) {
+					int center_x = 160+dx[direction]*150;
+					int center_y = 96+dy[direction]*85;
+					rect_type text_rect = {center_y-6, center_x-10, center_y+6, center_x+10};
+					char room_num[4];
+					snprintf(room_num, sizeof(room_num), "%d", other_room);
+					method_5_rect(&text_rect, 0, color_4_red);
+					show_text_with_color(&text_rect, 0, 0, room_num, color_15_brightwhite);
+				}
+			}
+		}
+	}
+	
+	// room number
+	char room_num[4];
+	snprintf(room_num, sizeof(room_num), "%d", drawn_room);
+	rect_type text_rect = {10, 10, 21, 30};
+	method_5_rect(&text_rect, 0, color_8_darkgray);
+	show_text_with_color(&text_rect, 0, 0, room_num, color_15_brightwhite);
+
+	// grid lines
+	rect_type vline = {0,0,192,1};
+	method_5_rect(&vline, 0, color_12_brightred);
+	rect_type hline = {3,0,4,320};
+	method_5_rect(&hline, 0, color_12_brightred);
+}
+
 // Save a "screenshot" of the whole level.
-void save_level_screenshot() {
+void save_level_screenshot(bool want_extras) {
 	// TODO: Disable in the intro or if a cutscene is active?
 	// Restrict this to cheat mode. After all, it's like using H/J/U/N or opening the level in an editor.
 	if (!cheats_enabled) return;
+	
+	upside_down = 0;
+
+	//printf("random_seed = 0x%08X\n", random_seed);
 
 	// First, figure out where to put each room.
 	// TODO: Check for broken room links?
 
-	#define NUMBER_OF_ROOMS 24
-	int xpos[NUMBER_OF_ROOMS+1] = {0};
-	int ypos[NUMBER_OF_ROOMS+1] = {0};
 	bool processed[NUMBER_OF_ROOMS+1] = {false};
 	xpos[drawn_room] = 0;
 	ypos[drawn_room] = 0;
 	int queue[NUMBER_OF_ROOMS] = {drawn_room}; // We start mapping from the current room.
 	int queue_start = 0;
 	int queue_end = 1;
-	
-	const int dx[4] = {-1, +1,  0,  0};
-	const int dy[4] = { 0,  0, -1, +1};
 	
 	while (queue_start < queue_end) {
 		int room = queue[queue_start++];
@@ -105,11 +347,17 @@ void save_level_screenshot() {
 		if (processed[room]) {
 			int y = ypos[room] - min_y;
 			int x = xpos[room] - min_x;
-			if (x>=0 && y>=0 && x<MAX_MAP_SIZE && y<MAX_MAP_SIZE) map[y][x] = room;
+			if (x>=0 && y>=0 && x<MAX_MAP_SIZE && y<MAX_MAP_SIZE) {
+				if (map[y][x]) {
+					printf("Warning: room %d was mapped to the same place as room %d!\n", room, map[y][x]);
+				}
+				map[y][x] = room;
+			}
 		}
 	}
 	
 	// Debug printout of arrangement.
+	/*
 	printf("LEVEL %d\n", current_level);
 	for (int y=0;y<map_height;y++) {
 		for (int x=0;x<map_width;x++) {
@@ -123,6 +371,7 @@ void save_level_screenshot() {
 		printf("\n");
 	}
 	printf("\n");
+	*/
 	
 	// Now we have the arrangement, let's make the picture!
 	
@@ -138,6 +387,48 @@ void save_level_screenshot() {
 
 	// TODO: Background color for places where there is no room?
 	
+	// Find out which door events are used:
+	has_trigger_potion = false;
+	memset(event_used, 0, sizeof(event_used));
+	for (int room=1;room<=NUMBER_OF_ROOMS;room++) {
+		if (processed[room]) {
+			get_room_address(room);
+			for (int tilepos=0;tilepos<30;tilepos++) {
+				int tile_type = curr_room_tiles[tilepos] & 0x1F;
+				if (tile_type == tiles_6_closer || tile_type == tiles_15_opener) {
+					int modifier = curr_room_modif[tilepos];
+					for (int index = modifier; index < 256; index++) {
+						event_used[index] = true;
+						if (!get_doorlink_next(index)) break;
+					}
+				}
+				if (tile_type == tiles_10_potion && curr_room_modif[tilepos] >> 3 == 6) {
+					has_trigger_potion = true;
+				}
+			}
+		}
+	}
+	
+	// debug
+	/*
+	printf("Used events:");
+	for (int event=0;event<256;event++) {
+		if (event_used[event]) {
+			printf(" %d", event+EVENT_OFFSET);
+		}
+	}
+	printf("\n");
+	*/
+	/*
+	for (int event=0;event<256;event++) {
+		if (event_used[event]) {
+			printf("event %d: room %d tile %d %s\n",
+				event+EVENT_OFFSET, get_doorlink_room(event), get_doorlink_tile(event),
+				get_doorlink_next(event) ? "+next" : "");
+		}
+	}
+	*/
+
 	screen_updates_suspended = true;
 	int old_room = drawn_room;
 	for (int y=0;y<map_height;y++) {
@@ -149,8 +440,8 @@ void save_level_screenshot() {
 				dest_rect.y = y*189;
 				switch_to_room(room);
 				
-				// TODO: Show non-visible things, like: room numbers, loose floors, guard HPs, potion types, door links...
-				// (this will make the function even more like a cheat)
+				if (want_extras) draw_extras();
+				
 				// TODO: Hide the status bar, or maybe show some custom text on it?
 				
 				SDL_BlitSurface(onscreen_surface_, NULL, map_surface, &dest_rect);
@@ -164,10 +455,13 @@ void save_level_screenshot() {
 	printf("Saved level screenshot to \"%s\".\n", screenshot_filename);
 	
 	SDL_FreeSurface(map_surface);
+
+	//printf("random_seed = 0x%08X\n", random_seed);
 }
 
 bool want_auto = false;
-bool want_auto_whole_level;
+bool want_auto_whole_level = false;
+bool want_auto_extras = false;
 
 void init_screenshot() {
 	// Command-line options to automatically save a screenshot at startup.
@@ -181,6 +475,7 @@ void init_screenshot() {
 		} else {
 			want_auto = true;
 			want_auto_whole_level = (check_param("--screenshot-level") != NULL);
+			want_auto_extras = (check_param("--screenshot-level-extras") != NULL);
 		}
 	}
 }
@@ -197,7 +492,7 @@ void auto_screenshot() {
 	if (!want_auto) return;
 	
 	if (want_auto_whole_level) {
-		save_level_screenshot();
+		save_level_screenshot(want_auto_extras);
 	} else {
 		save_screenshot();
 	}
